# schwifty

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: country.rs  country_specific.rs  error.rs  iban.rs  lib.rs
tests/: iban.rs
